--- a/src/components/layout/NoteCard.module.css
+++ b/src/components/layout/NoteCard.module.css
@@ -2,22 +2,28 @@
     display: flex;
     flex-direction: column;
     width:  270px;
-    height: 300px;
+    min-height: 300px;
+    max-height: 300px;
     padding: 1em 1em 0.3em;
     border-radius: 8px;
     background-color: rgba(255, 255, 255, 0.600);
 }
 
 .container h3 {
+    font-size: 1.1em;
     color: #4f4399;
     margin-bottom: 0.5em;
     border-bottom: 1px solid #836FFF;
+    overflow: auto;
 }
 
 .note_content {
     overflow: auto;
+    font-size: 1.1em;
     margin-bottom: 0.5em;
     border-bottom: 1px solid #836FFF;
+    min-height: 215px;
+    max-height: 215px;
     padding-bottom: 0.5em;
 }
 
@@ -57,16 +63,19 @@
 }
 
 /* Scrollbar do conteúdo das notas */
-.note_content::-webkit-scrollbar {
+.note_content::-webkit-scrollbar,
+.container h3::-webkit-scrollbar {
     width: 7px;
 }
 
-.note_content::-webkit-scrollbar-track {
+.note_content::-webkit-scrollbar-track,
+.container h3::-webkit-scrollbar-track {
     background-color: transparent;
     border-radius: 5px;
 }
 
-.note_content::-webkit-scrollbar-thumb {
+.note_content::-webkit-scrollbar-thumb,
+.container h3::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.250);
     border-radius: 5px;
 }
