--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,15 @@ html, body, #root {
   background-color: #333;
   height: 100%;
 }
+
+/* #root #dark {
+  background-color: #332381;
+}
+
+#root #dark > div {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+#root #dark > div > div {
+  background-color: rgba(0, 0, 0, 0.3);
+} */
