--- a/src/components/form/HeaderForm.module.css
+++ b/src/components/form/HeaderForm.module.css
@@ -29,3 +29,10 @@
     background-color: rgba(247, 5, 5, 0.150);
     color: rgb(197, 4, 4);
 }
+
+/* Responsive layout - Media Query */
+@media screen and (max-width: 550px) {
+    .header h3 {
+        font-size: 1em;
+    }
+}
