--- a/src/components/layout/Container.module.css
+++ b/src/components/layout/Container.module.css
@@ -21,11 +21,10 @@
 /* Barra do título */
 .top_bar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
     margin-bottom: 1em;
-    /* background-color: dodgerblue; */
 }
 
 .logo {
@@ -46,7 +45,7 @@
     height: 32px;
 }
 
-.top_bar button {
+/* .top_bar button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,9 +58,9 @@
     color: rgb(107, 107, 107);
     cursor: pointer;
     transition: 0.3s;
-}
+} 
 
 .top_bar button:hover {
     background-color: rgba(0, 0, 0, 0.100);
     color: rgba(0, 0, 0, 0.500);
-}
+} */
