--- a/src/components/layout/NoteCard.module.css
+++ b/src/components/layout/NoteCard.module.css
@@ -80,3 +80,44 @@
     background-color: rgba(0, 0, 0, 0.250);
     border-radius: 5px;
 }
+
+/* Responsive layout - Media Queries */
+@media screen and (max-width: 1350px) {
+    .container {
+        width: 32%;
+    }
+}
+
+@media screen and (max-width: 985px) {
+    .container {
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .container {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .container {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .container h3 {
+        overflow-x: hidden;
+    }
+
+    .container h3,
+    .note_content {
+        font-size: 0.8em;
+    }
+
+    .note_buttons {
+        font-size: 0.8em;
+        margin: auto 0;
+    }
+}
